--- a/WMS/Views/Theme/Default/Products/Create.cshtml
+++ b/WMS/Views/Theme/Default/Products/Create.cshtml
@@ -29,6 +29,12 @@
 @{
     ViewBag.Title = "Create";
 }
+<script>
+    $(document).ready(function () {
+        $("#ProductType option[value='6']").remove();
+        $("#ProductType").trigger("chosen:updated");
+    });
+</script>
 <h2>
     <span>Add New Product</span>
 </h2>
@@ -141,7 +147,7 @@
             <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.ProductType, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
-                    @Html.EnumDropDownListFor(model => model.ProductType, htmlAttributes: new { @class = "form-control" })
+                    @Html.EnumDropDownListFor(model => model.ProductType, htmlAttributes: new { @class = "form-control chosen-select" })
                     @Html.ValidationMessageFor(model => model.ProductType, "", new { @class = "text-danger" })
                 </div>
             </div>
